--- a/blog/theblog/templates/home.html
+++ b/blog/theblog/templates/home.html
@@ -1,11 +1,17 @@
-<h1>Post</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>Articles</h1>
 
 <ul>
 {% for post in object_list %}
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
     {{ post.author.last_name }}
-    </br>
+    <br/>
     {{ post.body }}</li>
-    </br>
+    <br/>
 {% endfor %}
 </ul>
+
+{% endblock %}
