--- a/blog/theblog/templates/article_details.html
+++ b/blog/theblog/templates/article_details.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 
-<h1>{{ post.title }}</h1>
+<h2>{{ post.title }}</h2>
 <small>By: 
     {{ post.author.first_name }}
-    {{ post.author.last_name }}  
+    {{ post.author.last_name }} - 
+    {{ post.post_date }} - 
     <a href="{% url 'update_post' post.pk %}">Edit</a> | 
     <a href="{% url 'delete_post' post.pk %}">Delete</a>
     <br/>
