added members app for user authentification

--- a/blog/theblog/templates/delete_post.html
+++ b/blog/theblog/templates/delete_post.html
@@ -3,15 +3,19 @@
 {% block title %}Delete post{% endblock %}
 
 {% block content %}
-
-<br/>
-<h3>Delete: {{ post.title }}</h3>
-<br/>
-<div class="mb-3">
-    <form method="POST">
+  {% if user.is_authenticated %}
+    <br/>
+    <h3>Delete: {{ post.title }}</h3>
+    <br/>
+    <div class="mb-3">
+      <form method="POST">
         {% csrf_token %}
         <strong>Are you sure?</strong><br/><br/>
         <button class="btn btn-danger">Delete</button>
-    </form>
-</div>
+      </form>
+    </div>
+  {% else %}
+    You have no permission to delete this article.<br/>
+    You should <a href="{% url 'register' %}">register</a> or <a href="{% url 'login' %}">login</a> if you have an account.
+  {% endif %}
 {% endblock %}
