--- a/blog/theblog/templates/add_post.html
+++ b/blog/theblog/templates/add_post.html
@@ -4,13 +4,19 @@
 
 {% block content %}
 
-<h2>Add post</h2>
-<br/>
-<div class="mb-3">
-    <form method="POST">
+  {% if user.is_authenticated %}
+    <h2>Add post</h2>
+    <br/>
+    <div class="mb-3">
+      <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <button class="btn btn-secondary">Create</button>
-    </form>
-</div>
+      </form>
+    </div>
+  {% else %}
+    You have no permission to create an article.<br/>
+    You should <a href="{% url 'register' %}">register</a> or <a href="{% url 'login' %}">login</a> if you have an account.
+  {% endif %}
+
 {% endblock %}
