--- a/blog/theblog/templates/base.html
+++ b/blog/theblog/templates/base.html
@@ -25,10 +25,13 @@
                 <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Hello, {{ user.first_name }}</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
             {% else %}
               <li class="nav-item">
