--- a/blog/theblog/templates/home.html
+++ b/blog/theblog/templates/home.html
@@ -7,11 +7,15 @@
 <ul>
 {% for post in object_list %}
   <li>
-    <a href="{% url 'article_detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }}
-    {{ post.author.last_name }} - {{ post.post_date }}
+    <a href="{% url 'article_detail' post.pk %}">{{ post.title }}</a> - 
+    <a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a> - 
+    {{ post.author.first_name }}
+    {{ post.author.last_name }} - 
+    {{ post.post_date }}
     <small>
       {% if user.is_authenticated %}
-        - <a href="{% url 'update_post' post.pk %}">Edit</a> | 
+        - 
+        <a href="{% url 'update_post' post.pk %}">Edit</a> | 
         <a href="{% url 'delete_post' post.pk %}">Delete</a>
       {% endif %}
     </small>
