--- a/blog/theblog/templates/update_post.html
+++ b/blog/theblog/templates/update_post.html
@@ -5,15 +5,21 @@
 {% block content %}
 
   {% if user.is_authenticated %}
-    <h2>Update post</h2>
-    <br/>
-    <div class="mb-3">
-      <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Update</button>
-      </form>
-    </div> 
+    {% if user.id == post.author.id %} 
+      <h2>Update post</h2>
+      <br/>
+      <div class="mb-3">
+        <form method="POST">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button class="btn btn-secondary">Update</button>
+        </form>
+      </div> 
+    {% else %}
+      This article do not want to be edited by you, naughty boy<br/>
+      You will be redirected to the home page in 3 secounds</p>
+      <meta http-equiv = "refresh" content = "3; url = /" />
+    {% endif %}
   {% else %}
     You have no permission to edit this article.<br/>
     You should <a href="{% url 'register' %}">register</a> or <a href="{% url 'login' %}">login</a> if you have an account.
