--- a/blog/theblog/templates/article_details.html
+++ b/blog/theblog/templates/article_details.html
@@ -24,5 +24,13 @@
 
 <br/>
 <a href="{% url 'home' %}" class="btn btn-dark">Back</a>
-
+<br/><br/>
+<hr>
+<form action="{% url 'like_post' post.pk %}" method="POST">
+  {% csrf_token %}
+  <button type="submit", name="post_id", value="{{ post.id }}", class="btn btn-primary btn-sm">
+    Like
+  </button>
+  - {{ total_likes }} Likes
+</form>
 {% endblock %}
