added custom snippets to display on home page

--- a/blog/theblog/templates/home.html
+++ b/blog/theblog/templates/home.html
@@ -22,7 +22,7 @@
         {% endif %}
       </small>
       <br/>
-      {{ post.body|slice:"200"|safe }}
+      {{ post.snippet }}
     </li>
     <br/>
   {% endfor %}
