--- a/blog/theblog/templates/article_details.html
+++ b/blog/theblog/templates/article_details.html
@@ -6,6 +6,7 @@
 
 <h2>{{ post.title }}</h2>
 <a href="{% url 'category' post.category %}">{{ post.category }}</a>
+<strong>I`m post.category: {{ post.category }}</strong>
 <br/>
 <small>By: 
     {{ post.author.first_name }}
