added ability to upload an image to an article

--- a/blog/theblog/templates/base.html
+++ b/blog/theblog/templates/base.html
@@ -40,7 +40,24 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add_category' %}">Add Category</a>
               </li>
+          </ul>
+          <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'edit_profile' %}">Edit profile</a>
+                </li>
+                <li class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
+                  <div class="vr d-none d-lg-flex h-100 mx-lg-2 text-white"></div>
+                  <hr class="d-lg-none my-2 text-white-50">
+                </li>          
+                <li class="nav-item">
+                  <a class="nav-link disabled">Hello, {{ user.username }}</a>
+                </li>
+          </ul>
             {% else %}
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">Register</a>
               </li>
@@ -49,19 +66,6 @@
               </li>
             {% endif %}              
           </ul>
-          {% if user.is_authenticated %}
-            <ul class="navbar-nav">
-              <span class="navbar-text">
-                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-              </span>
-              <span class="navbar-text">
-                <a class="nav-link" href="{% url 'edit_profile' %}">Edit profile</a>
-              </span>
-              <span class="navbar-text">
-                <a class="nav-link disabled">Hello, {{ user.username }}</a>
-              </span>
-            </ul>
-          {% endif %}
           <!--  Back later
           <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
