--- a/blog/theblog/templates/add_post.html
+++ b/blog/theblog/templates/add_post.html
@@ -8,7 +8,7 @@
     <h2>Add post</h2>
     <br/>
     <div class="mb-3">
-      <form method="POST">
+      <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
         {{ form.as_p }}
