--- a/blog/theblog/templates/update_post.html
+++ b/blog/theblog/templates/update_post.html
@@ -9,7 +9,7 @@
       <h2>Update post</h2>
       <br/>
       <div class="mb-3">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {{ form.media }}
           {{ form.as_p }}
