--- a/blog/theblog/templates/article_details.html
+++ b/blog/theblog/templates/article_details.html
@@ -71,8 +71,9 @@
           {{ post.author.last_name }}
         </h5>
         <p class="small text-muted">
+          <a href="{% url 'show_profile_page' post.author.profile.id %}">Profile page</a> |
           {% if post.author.profile.website_url %}
-            <a href="{{ post.author.profile.website_url }}">Website |</a>
+            <a href="{{ post.author.profile.website_url }}">Website</a> |
           {% endif %}
           {% if post.author.email %}
             Email: {{ post.author.email }}
