--- a/blog/members/templates/registration/my_login.html
+++ b/blog/members/templates/registration/my_login.html
@@ -7,11 +7,17 @@
 <h2>Login</h2>
 <br/>
 <div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Login</button>
-    </form>
+  <form method="POST">
+    {% csrf_token %}
+    <div class="mb-3">
+      <input type="text" class="form-control" name="username" placeholder="Username">
+    </div>
+    <div class="mb-3">
+      <input type="password" class="form-control" name="password" placeholder="Password">
+    </div>
+    <button class="btn btn-secondary">Login</button>
+  </form>
 </div>
+<small>Not registered? Sign up <a href="{% url 'register' %}">here</a></small>
 
 {% endblock %}
