--- a/blog/theblog/templates/article_details.html
+++ b/blog/theblog/templates/article_details.html
@@ -68,6 +68,7 @@
         </h5>
         <p class="small text-muted">
           <a href="{% url 'show_profile_page' post.author.profile.id %}">Profile page</a> |
+          {% if post.author.profile.website_url %}
             <a href="{{ post.author.profile.website_url }}">Website</a> |
           {% endif %}
           {% if post.author.email %}
