--- a/blog/theblog/templates/base.html
+++ b/blog/theblog/templates/base.html
@@ -73,16 +73,18 @@
       {% endblock %}
     </div>
   </body>
-  <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-secondary">
-    <div class="container text-body-secondary">
-      <div class="d-flex mb-3">
-        <div class="p-2">
-          All rights reserved.
-        </div>
-        <div class="ms-auto p-2">
-          You can see code of this blog on <a href="https://github.com/Valetra/django_blog_new">Github</a>.
+  <div style="position: fixed; bottom: 0; width: 100%;">
+    <footer class="bd-footer py-4 py-3 mt-3 bg-body-secondary">
+      <div class="container text-body-secondary">
+        <div class="d-flex mb-3">
+          <div class="p-2">
+            All rights reserved.
+          </div>
+          <div class="ms-auto p-2">
+            You can see code of this blog on <a href="https://github.com/Valetra/django_blog_new">Github</a>.
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </html>
