--- a/blog/theblog/templates/base.html
+++ b/blog/theblog/templates/base.html
@@ -47,7 +47,7 @@
             </ul>
             {% else %}
           </ul>  
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'register' %}">Register</a>
               </li>
