--- a/blog/theblog/templates/base.html
+++ b/blog/theblog/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
   </head>
-  <body>
+  <body style="height: 100%;">
     <nav class="navbar bg-dark navbar-expand-lg" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Blog for all</a>
@@ -70,19 +70,22 @@
       
       {% endblock %}
     </div>
-    <div style="position: static; bottom: 0; width: 100%; margin-top: 5%;">
-      <footer class="bd-footer py-4 py-3 mt-3 bg-body-secondary">
-        <div class="container text-body-secondary">
-          <div class="d-flex mb-3">
-            <div class="p-2">
-              All rights reserved.
-            </div>
-            <div class="ms-auto p-2">
-              You can see code of this blog on <a href="https://github.com/Valetra/django_blog_new">Github</a>.
+    <br/>
+    <div style="position: relative; margin-top: 5%; width: 100%;">
+      <div style="position: fixed; bottom: 0; width: 100%;">
+        <footer class="bd-footer py-4 py-3 mt-3 bg-body-secondary">
+          <div class="container text-body-secondary">
+            <div class="d-flex mb-3">
+              <div class="p-2">
+                All rights reserved.
+              </div>
+              <div class="ms-auto p-2">
+                You can see code of this blog on <a href="https://github.com/Valetra/django_blog_new">Github</a>.
+              </div>
             </div>
           </div>
-        </div>
-      </footer>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
